Reamd.me and completed swagger
