# controller/car/get.go
@@ -5,10 +5,20 @@ import (
 	"fmt"
 	"github.com/gorilla/mux"
 	"github.com/leandroyou/http-car/controller/route"
+	_ "github.com/leandroyou/http-car/model/dao"
 	"github.com/leandroyou/http-car/service"
 	"net/http"
 )
 
+// GetCar godoc
+// @Summary Get a car
+// @Description Get a car when an Id is given
+// @Accept  json
+// @Produce  json
+// @Param id path string true "Car ID"
+// @Success 200 {object} dao.Car
+// @Failure 500 {string} Error
+// @Router /car/get/{id} [get]
 func init() {
 	route.Routes.HandleFunc("/car/get/{id}", GetHandler)
 }
